--- a/XVisionDemo.uproject
+++ b/XVisionDemo.uproject
@@ -13,17 +13,11 @@
 	"Plugins": [
 		{
 			"Name": "XVision",
-			"Enabled": true,
-			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/03625af438ce4dc89df9d8ba1f7aeecf"
+			"Enabled": true
 		},
 		{
 			"Name": "Bridge",
-			"Enabled": true,
-			"SupportedTargetPlatforms": [
-				"Win64",
-				"Mac",
-				"Linux"
-			]
+			"Enabled": true
 		}
 	]
 }
