--- a/Config/DefaultDeviceProfiles.ini
+++ b/Config/DefaultDeviceProfiles.ini
@@ -2,5 +2,10 @@
 DeviceType=Windows
 BaseProfileName=
 bIsVisibleForAssets=True
-+CVars=mass.AllowQueryParallelFor=true
+-CVars=UI.SlateSDFText.RasterizationMode=Msdf
+-CVars=UI.SlateSDFText.ResolutionLevel=2
++CVars=UI.SlateSDFText.RasterizationMode=Msdf
++CVars=UI.SlateSDFText.ResolutionLevel=2
++CVars=mass.AllowQueryParallelFor=false
++CVars=mass.FullyParallel=true
 
